# self-supervised-learning

./: .flake8  .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  copy_image_to_annotate.py  mars_dataset_eda.ipynb  pyproject.toml  sync_exclude.txt  training_example.ipynb
.ipython/profile_default/startup/: 00-kedro-init.py
code_gen/: config.json  openapi.json
conf/a100/parameters/: training.yml
conf/base/: catalog.yml  globals.yml  parameters.yml
conf/base/parameters/: active_learning.yml  eda.yml  (+18 more)
data/01_raw/: gpheno_dataset_flower.yml  mars_dataset.yml  mars_dataset_boll.yml  mars_dataset_flower.yml  mars_dataset_flower_realsense.yml  yolov8l.yml
docs/source/: conf.py  index.rst
notebooks/: Training Time Comparison.xlsx  cens_net_test.ipynb  clustering.ipynb  create_plot_status_dataset.ipynb  generate_figures.ipynb  model_conversion.ipynb  model_eval.ipynb  representation_eval.ipynb  test_colorization_loading.ipynb  test_rotnet_loading.ipynb  test_tracking_data_pipeline.ipynb  training_example.ipynb  yolo_test.ipynb
pycvat/: .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  faker_providers.py  pyproject.toml
pycvat/dataset/: cvat_connector.py  job.py
pycvat/dataset/tests/: test_api.py  test_clearable_cached_property.py  test_job.py  test_task.py
pycvat/kedro/: cvat_data_set.py
pycvat/kedro/tests/: __init__.py  test_cvat_data_set.py
pycvat/pycvat/: __init__.py  conftest.py  type_helpers.py
pycvat/pycvat/dataset/: __init__.py  api.py  clearable_cached_property.py  swagger_extensions.py  task.py
pycvat/pycvat/dataset/tests/: test_api.py  test_cvat_connector.py  test_swagger_extensions.py  test_task.py
pycvat/pycvat/kedro/: __init__.py  cvat_data_set.py
pycvat/pycvat/kedro/tests/: test_cvat_data_set.py
pycvat/pycvat/tracking/: cvat_tracker_main.py
pycvat/pycvat/tracking/tests/: test_tracker.py
pycvat/pycvat/tracking/tests/test_images/: __init__.py
pycvat/python-client/: README.md  setup.py
pycvat/python-client/docs/: About.md  Attribute.md  AttributeVal.md  AuthApi.md  AuthSigningBody.md  BaseCloudStorage.md  BasicUser.md  Body.md  ClientFile.md  CloudStorage.md  CloudStoragesApi.md  CombinedIssue.md  CommentsApi.md  Data.md  DataMeta.md  DatasetFormats.md  Exception.md  FrameMeta.md  InlineResponse200.md  InlineResponse2001.md  Issue.md  IssuesApi.md  Job.md  JobsApi.md  LabeledShape.md  LambdaApi.md  Login.md  PasswordResetConfirm.md  PasswordResetSerializerEx.md  PredictApi.md  Project.md  RestrictedRegister.md  RestrictionsApi.md  Review.md  ReviewsApi.md  RqStatus.md  Segment.md  ServerApi.md  ServerFile.md  SimpleJob.md  (+7 more)
pycvat/python-client/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
pycvat/python-client/swagger_client/api/: __init__.py  cloud_storages_api.py  lambda_api.py  projects_api.py  restrictions_api.py  reviews_api.py  server_api.py  users_api.py
pycvat/python-client/swagger_client/models/: attribute_val.py  auth_signing_body.py  basic_user.py  body.py  client_file.py  cloud_storage.py  combined_review.py  comment.py  data.py  data_meta.py  dataset_format.py  dataset_formats.py  file_info.py  inline_response2002.py  issue.py  job.py  labeled_data.py  labeled_image.py  labeled_track.py  login.py  manifest.py  password_change.py  password_reset_confirm.py  password_reset_serializer_ex.py  plugins.py  project.py  remote_file.py  restricted_register.py  rq_status.py  segment.py  task.py  tracked_shape.py  training_project.py
pycvat/python-client/test/: test_attribute.py  test_attribute_val.py  test_auth_signing_body.py  test_base_cloud_storage.py  test_basic_user.py  test_body.py  test_cloud_storages_api.py  test_combined_issue.py  test_combined_review.py  test_comment.py  test_dataset_formats.py  test_file_info.py  test_frame_meta.py  test_inline_response200.py  test_inline_response2002.py  test_issue.py  test_issues_api.py  test_jobs_api.py  test_label.py  test_labeled_data.py  test_labeled_image.py  test_labeled_shape.py  test_labeled_track.py  test_lambda_api.py  test_login.py  test_password_change.py  test_password_reset_confirm.py  test_password_reset_serializer_ex.py  test_plugins.py  test_predict_api.py  test_projects_api.py  test_restrictions_api.py  test_reviews_api.py  test_rq_status.py  test_segment.py  test_server_api.py  test_simple_job.py  test_task.py  test_user.py  test_users_api.py
pycvat/testing_framework/: pytest.ini
pycvat/tracking/: __init__.py  __main__.py  tracker.py
pycvat/tracking/tests/: __init__.py
pycvat/tracking/tests/snapshots/test_tracker/test_track_forward_integration/: annotation_points.yaml
python-client/: README.md  openapi.yaml  setup.py
python-client/docs/: CombinedReview.md  Comment.md  CommentsApi.md  Data.md  DatasetFormat.md  FileInfo.md  InlineResponse2002.md  JobsApi.md  Label.md  LabeledData.md  LabeledImage.md  LabeledTrack.md  LambdaApi.md  LogEvent.md  Manifest.md  PasswordChange.md  Plugins.md  Project.md  ProjectsApi.md  RemoteFile.md  ReviewsApi.md  TasksApi.md
python-client/test/: test_about.py  test_auth_api.py  test_client_file.py  test_cloud_storage.py  test_comments_api.py  test_data.py  test_data_meta.py  test_dataset_format.py  test_exception.py  test_inline_response2001.py  test_job.py  test_log_event.py  test_manifest.py  test_project.py  test_projects_api.py  test_remote_file.py  test_restricted_register.py  test_review.py  test_server_file.py  test_tasks_api.py  test_tracked_shape.py  test_training_project.py  test_user_agreement.py
scripts/: load_common.sh  package_artifacts.sh  submit_active_learning_job_a100.sh  submit_colorization_training_job.sh  submit_rotnet_training_job.sh  submit_training_job.sh  submit_training_job_a100.sh  submit_training_job_p100.sh  submit_training_job_v100.sh  submit_training_job_yolo.sh
src/: setup.py
src/cotton_flower_mot/: hooks.py  pipeline_registry.py  settings.py  type_helpers.py
src/self_supervised/: __init__.py  cli.py  pipeline_registry.py
src/slowfast/: setup.py
src/tests/: conftest.py  test_run.py
testing_framework/: .coveragerc  pytest.ini
(+242 files in other folders)
