[tool.poetry]
name = "self_supervised"
version = "0.1.0"
description = "Multi-object tracking for cotton flowers."
authors = ["Daniel Petti <djpetti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
kedro = {extras = ["matplotlib", "pandas"], version = "^0.18.1"}
pandas = "1.5"
loguru = "^0.5.3"
seaborn = "^0.11.1"
matplotlib = "^3.3.4"
pydantic = "^1.8.1"
scipy = "^1.6.2"
numpy = "1.22"
opencv-contrib-python = "^4.5"
tqdm = "^4.64.0"
python-json-logger = "^2.0.4"
setuptools = "^65.7.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
methodtools = "^0.4.5"
wandb = "^0.13.9"
torchmetrics = "^0.11.0"
scikit-learn = "^1.2.1"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
ultralytics = "^8.1.24"
pyyaml = "^6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-black = "^0.3.12"
black = "^22.3.0"
isort = "^5.7.0"
pre-commit = "^2.11.0"
pytest-snapshot = "^0.5.0"
Faker = "^6.6.2"
pytest-coverage = "^0.0"
pytest-flake8 = "^1.0.7"
pydot = "^1.4.2"
jupyterlab = "^3.4.2"

[tool.poetry.group.video.dependencies]
yacs = "^0.1.8"
av = "^11.0.0"
termcolor = "^2.4.0"
simplejson = "^3.19.2"
tqdm = "^4.66.2"
psutil = "^5.9.8"
opencv-python = "^4.9.0.80"
pyyaml = "^6.0.1"
pillow = "^10.2.0"
scikit-learn = "^1.4.1.post1"
fairscale = "^0.4.13"
slowfast = {path = "src/slowfast", develop = true}
iopath = "^0.1.10"
fvcore = "^0.1.5.post20221221"
pytorchvideo = {git = "https://github.com/facebookresearch/pytorchvideo.git", rev = "eb04d1b"}

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"

[tool.kedro]
package_name = "self_supervised"
project_name = "Self-Supervised Learning"
project_version = "0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
