[tool.poetry]
name = "pycvat"
version = "0.8.0"
description = "High-level Python API and utilities for CVAT."
authors = ["Daniel Petti <djpetti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
requests = "^2.24.0"
loguru = "^0.5.1"
pillow = ">=7.1.0"
methodtools = "^0.4.2"
numpy = ">=1.16"
opencv-python = "^4.4.0"
opencv-contrib-python = "^4.4.0"
pydantic = "^1.6.1"
kedro = ">=0.16.4"
"backports.cached-property" = "^1.0.0"
swagger-client = { path = "python-client", develop = false }
singledispatchmethod = "^1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest_mock = "^3.3.1"
pytest_cov = "^2.10.1"
pytest_black = "^0.3.11"
pytest_flake8 = "^1.0.6"
faker = "^4.1.2"
pytest-snapshot = "^0.4.2"
pyyaml = "^5.3.1"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
    | python-client
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist', 'python-client')"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
